# claude-adapter-py

./: .gitignore  LICENSE  PROGRAM.md  QUICKSTART_CN.md  README.md  README_CN.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/claude_adapter/: __init__.py  __main__.py  cli.py  providers.py  server.py
src/claude_adapter/converters/: __init__.py  request.py  response.py  streaming.py  tools.py  xml_prompt.py  xml_streaming.py
src/claude_adapter/handlers/: __init__.py  messages.py
src/claude_adapter/models/: __init__.py  anthropic.py  config.py
src/claude_adapter/utils/: __init__.py  config.py  context_size.py  error_log.py  file_storage.py  logger.py  metadata.py  token_usage.py  ui.py  update.py  validation.py
tests/: __init__.py  test_cli_custom_config.py  test_converters.py  test_messages_handler_streaming.py  test_streaming_converters.py  test_validation.py
