[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-adapter-py"
version = "1.0.0"
description = "Python adapter to use OpenAI-compatible APIs with Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Claude Adapter Contributors"}
]
keywords = [
    "claude",
    "claude-code",
    "openai",
    "anthropic",
    "api-adapter",
    "proxy",
    "llm",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "typer[all]>=0.12.0",
    "questionary>=2.0.1",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
claude-adapter-py = "claude_adapter.cli:cli_main"

[project.urls]
Homepage = "https://github.com/your-repo/claude-adapter-py"
Documentation = "https://github.com/your-repo/claude-adapter-py#readme"
Repository = "https://github.com/your-repo/claude-adapter-py"
Issues = "https://github.com/your-repo/claude-adapter-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
